social links integration

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -60,11 +60,11 @@
 </section>
 <!-- Main Carousel Section End -->
 <div class="icon-bar">
-    <a href="#" class="facebook"><i class="fa fa-facebook"></i></a> 
-    <a href="#" class="twitter"><i class="fa fa-twitter"></i></a> 
-    <a href="#" class="google"><i class="fa fa-google"></i></a> 
+    <a href="https://www.facebook.com/PokerSportsLeague" class="facebook" target="_blank"><i class="fa fa-facebook"></i></a> 
+    <a href="https://twitter.com/PSL_Ind" class="twitter" target="_blank"><i class="fa fa-twitter"></i></a> 
+    <a href="https://www.instagram.com/pokersportsleague/" class="instagram" target="_blank"><i class="fa fa-instagram"></i></a> 
     
-    <a href="#" class="youtube"><i class="fa fa-youtube"></i></a> 
+    <a href="https://www.youtube.com/channel/UCDJYOEciWDkzicSQ-RkJTCA" class="youtube" target="_blank"><i class="fa fa-youtube" ></i></a> 
   </div>
 <!--Static register form Start-->
 <div class="psl_banner_registerbg">
