--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -21,7 +21,7 @@ right: 0; ">
                     <div class="headsocial_list">
                         <ul>
                             <li><a href="https://www.facebook.com/PokerSportsLeague" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="https://www.instagram.com/pokersportsleague/" target="_blank"><i class="fa fa-instagram"></i></a></li>
                             <li><a href="https://twitter.com/PSL_Ind" target="_blank"><i class="fa fa-twitter"></i></a></li>
                             
                         </ul>
