--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -24,10 +24,10 @@
             <div class="col-md-6 col-lg-3 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay="0.6s">
                 <h3>FOLLOW US ON</h3>
                 <ul class="footer-social">
-                    <li><a class="facebook" href="#"><i class="lni-facebook-filled"></i></a></li>
-                    <li><a class="twitter" href="#"><i class="lni-twitter-filled"></i></a></li>
-                    <li><a class="linkedin" href="#"><i class="lni-instagram-filled"></i></a></li>
-                    <li><a class="google-plus" href="#"><i class="lni-google-plus"></i></a></li>
+                    <li><a class="facebook" href="https://www.facebook.com/PokerSportsLeague" target="_blank"><i class="lni-facebook-filled"></i></a></li>
+                    <li><a class="twitter" href="https://twitter.com/PSL_Ind" target="_blank"><i class="lni-twitter-filled"></i></a></li>
+                    <li><a class="instagram" href="https://www.instagram.com/pokersportsleague/" target="_blank"><i class="lni-instagram-filled"></i></a></li>
+                    <li><a class="youtube" href="https://www.youtube.com/channel/UCDJYOEciWDkzicSQ-RkJTCA"  target="_blank"><i class="fa fa-youtube" ></i></a></li>
                 </ul>
 
 
