--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -8,10 +8,7 @@
             <div class="team-banner">
                 <img class="d-block w-100" src="assets/img/background/team-banner.jpg" alt="First slide">
                 <div class="carousel-caption d-md-block">
-                    <p class="fadeInUp wow" data-wow-delay=".6s">India's First Poker League</p>
-
-                    <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Poker Sports League</h1>
-                    <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Picture Gallery</h1>
+                    <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Event Gallary</h1>
                     <a href="javascript:void(0);" class="fadeInLeft wow btn btn-border btn-lg" data-wow-delay=".6s" (click)="togglereg()" id="reg">Register Now! </a>
                     <div *ngIf="!auth.isLoggedIn() && !user" class="nav-item">
                         <button (click)="toggle()" id="btToggle" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Login </button>
@@ -28,8 +25,8 @@
         <div class="row">
             <div class="col-12">
                 <div class="section-title-header text-center">
-                    <h1 class="section-title wow fadeInUp" data-wow-delay="0.2s">our event gallery</h1>
-                    <p class="wow fadeInDown" data-wow-delay="0.2s">Global Grand Event on Digital Design</p>
+                   
+                 
                 </div>
             </div>
         </div>
@@ -101,6 +98,150 @@
                     </div>
                     <div class="overlay-box text-center">
                         <a class="lightbox" href="assets/img/gallery/image7.jpg">
+                            <i class="lni-plus"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="ccol-md-6 col-sm-6 col-lg-4">
+                <div class="gallery-box">
+                    <div class="img-thumb">
+                        <img class="img-fluid" src="assets/img/gallery/image8.jpg" alt="">
+                    </div>
+                    <div class="overlay-box text-center">
+                        <a class="lightbox" href="assets/img/gallery/image8.jpg">
+                            <i class="lni-plus"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="ccol-md-6 col-sm-6 col-lg-4">
+                <div class="gallery-box">
+                    <div class="img-thumb">
+                        <img class="img-fluid" src="assets/img/gallery/image9.jpg" alt="">
+                    </div>
+                    <div class="overlay-box text-center">
+                        <a class="lightbox" href="assets/img/gallery/image9.jpg">
+                            <i class="lni-plus"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="ccol-md-6 col-sm-6 col-lg-4">
+                <div class="gallery-box">
+                    <div class="img-thumb">
+                        <img class="img-fluid" src="assets/img/gallery/image10.jpg" alt="">
+                    </div>
+                    <div class="overlay-box text-center">
+                        <a class="lightbox" href="assets/img/gallery/image10.jpg">
+                            <i class="lni-plus"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="ccol-md-6 col-sm-6 col-lg-4">
+                <div class="gallery-box">
+                    <div class="img-thumb">
+                        <img class="img-fluid" src="assets/img/gallery/image11.jpg" alt="">
+                    </div>
+                    <div class="overlay-box text-center">
+                        <a class="lightbox" href="assets/img/gallery/image11.jpg">
+                            <i class="lni-plus"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="ccol-md-6 col-sm-6 col-lg-4">
+                <div class="gallery-box">
+                    <div class="img-thumb">
+                        <img class="img-fluid" src="assets/img/gallery/image12.jpg" alt="">
+                    </div>
+                    <div class="overlay-box text-center">
+                        <a class="lightbox" href="assets/img/gallery/image12.jpg">
+                            <i class="lni-plus"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="ccol-md-6 col-sm-6 col-lg-4">
+                <div class="gallery-box">
+                    <div class="img-thumb">
+                        <img class="img-fluid" src="assets/img/gallery/image13.jpg" alt="">
+                    </div>
+                    <div class="overlay-box text-center">
+                        <a class="lightbox" href="assets/img/gallery/image13.jpg">
+                            <i class="lni-plus"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="ccol-md-6 col-sm-6 col-lg-4">
+                <div class="gallery-box">
+                    <div class="img-thumb">
+                        <img class="img-fluid" src="assets/img/gallery/image14.jpg" alt="">
+                    </div>
+                    <div class="overlay-box text-center">
+                        <a class="lightbox" href="assets/img/gallery/image14.jpg">
+                            <i class="lni-plus"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="ccol-md-6 col-sm-6 col-lg-4">
+                <div class="gallery-box">
+                    <div class="img-thumb">
+                        <img class="img-fluid" src="assets/img/gallery/image15.jpg" alt="">
+                    </div>
+                    <div class="overlay-box text-center">
+                        <a class="lightbox" href="assets/img/gallery/image15.jpg">
+                            <i class="lni-plus"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="ccol-md-6 col-sm-6 col-lg-4">
+                <div class="gallery-box">
+                    <div class="img-thumb">
+                        <img class="img-fluid" src="assets/img/gallery/image16.jpg" alt="">
+                    </div>
+                    <div class="overlay-box text-center">
+                        <a class="lightbox" href="assets/img/gallery/image16.jpg">
+                            <i class="lni-plus"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="ccol-md-6 col-sm-6 col-lg-4">
+                <div class="gallery-box">
+                    <div class="img-thumb">
+                        <img class="img-fluid" src="assets/img/gallery/image17.jpg" alt="">
+                    </div>
+                    <div class="overlay-box text-center">
+                        <a class="lightbox" href="assets/img/gallery/image17.jpg">
+                            <i class="lni-plus"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="ccol-md-6 col-sm-6 col-lg-4">
+                <div class="gallery-box">
+                    <div class="img-thumb">
+                        <img class="img-fluid" src="assets/img/gallery/image18.jpg" alt="">
+                    </div>
+                    <div class="overlay-box text-center">
+                        <a class="lightbox" href="assets/img/gallery/image18.jpg">
+                            <i class="lni-plus"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="ccol-md-6 col-sm-6 col-lg-4">
+                <div class="gallery-box">
+                    <div class="img-thumb">
+                        <img class="img-fluid" src="assets/img/gallery/image19.jpg" alt="">
+                    </div>
+                    <div class="overlay-box text-center">
+                        <a class="lightbox" href="assets/img/gallery/image19.jpg">
                             <i class="lni-plus"></i>
                         </a>
                     </div>
