--- a/src/app/psl-team/psl-team.component.html
+++ b/src/app/psl-team/psl-team.component.html
@@ -7,8 +7,7 @@
             <div class="team-banner">
                 <img class="d-block w-100" src="assets/img/background/team-banner.jpg" alt="First slide">
                 <div class="carousel-caption d-md-block">
-                    <p class="fadeInUp wow" data-wow-delay=".6s">India's First Poker League</p>
-                    <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Poker Sports League</h1>
+            
                     <h1 class="wow fadeInDown heading" data-wow-delay=".4s">PSL Teams</h1>
                     <a href="javascript:void(0);" class="fadeInLeft wow btn btn-border btn-lg" data-wow-delay=".6s" (click)="togglereg()" id="reg">Register Now! </a>
                     <div *ngIf="!auth.isLoggedIn() && !user" class="nav-item">
@@ -27,7 +26,7 @@
     <div class="container py-lg-3 py-2">
         <div class="heading text-center">
 
-            <h3 class="heading mb-sm-5 mb-3 text-uppercase">Teams</h3>
+            <h3 class="heading mb-sm-5 mb-3 text-uppercase">Season2 Teams</h3>
         </div>
         <div class="row barber-grids">
             <div class="col-lg-3 col-sm-6 mb-lg-0 mb-5 text-center team-div">
