--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -56,7 +56,7 @@ right: 0; ">
             </div>
             <div class="collapse navbar-collapse" id="main-navbar">
                 <ul class="navbar-nav mr-auto w-100 justify-content-end">
-                    <li class="nav-item active">
+                    <li class="nav-item ">
                         <a class="nav-link" href="#">
                 HOME
                 </a>
