--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -7,6 +7,7 @@
         <div class="carousel-inner">
             <div class="team-banner">
                 <img class="d-block w-100" src="assets/img/background/team-banner.jpg" alt="First slide">
+                
                 <div class="carousel-caption d-md-block">
                     <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Event Gallary</h1>
                     <a href="javascript:void(0);" class="fadeInLeft wow btn btn-border btn-lg" data-wow-delay=".6s" (click)="togglereg()" id="reg">Register Now! </a>
@@ -20,7 +21,7 @@
         <!-- Main Carousel Section End -->
     </div>
 </header>
-<section id="gallery" class="section-padding">
+<section id="gallery" class="section-padding" style="margin-top: 7%;">
     <div class="container">
         <div class="row">
             <div class="col-12">
