--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -153,7 +153,7 @@ right: 0; ">
     
         <!-- Mobile Menu Start -->
         <ul class="mobile-menu">
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="#">
     HOME
     </a>
@@ -200,7 +200,7 @@ right: 0; ">
             </a>
     
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" routerLink="/league-structure" routerLinkActive="router-link-active" href='#top'>LEAGUE STRUCTURE</a></li>
+                    
                     <li><a class="dropdown-item" routerLink="/how-to-play" routerLinkActive="router-link-active" href='#top'>HOW TO APPLY</a></li>
                     <li><a class="dropdown-item" routerLink="/qualifier" routerLinkActive="router-link-active" href='#top'>BE A QUALIFIER</a></li>
                     <li><a class="dropdown-item" routerLink="/pro" routerLinkActive="router-link-active" href='#top'>BE A PRO</a></li>
