--- a/src/app/season1/season1.component.html
+++ b/src/app/season1/season1.component.html
@@ -10,8 +10,11 @@
                 <div class="carousel-caption d-md-block">
                  
                     <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Season 1</h1>
-                    <a href="#" class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Register Now!</a>
-                    <a href="#" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Login</a>
+                    <div id="mySidenav" class="sidenav">
+                        <div class="">
+                            <a href="#" class="nav-reg-btn levitate" style="padding: 8px 6px; font-size: 15px; color: #061d40"  id="reg"><strong>REGISTER</strong></a>
+                        </div>
+                    </div>
 
                 </div>
             </div>
