--- a/src/app/about-vision/about-vision.component.html
+++ b/src/app/about-vision/about-vision.component.html
@@ -10,9 +10,10 @@
                 <div class="carousel-caption d-md-block">
                     
                     <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Our Vission</h1>
-                    <a href="javascript:void(0);" class="fadeInLeft wow btn btn-border btn-lg" data-wow-delay=".6s" (click)="togglereg()" id="reg">Register Now! </a>
-                    <div *ngIf="!auth.isLoggedIn() && !user" class="nav-item">
-                        <button (click)="toggle()" id="btToggle" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Login </button>
+                    <div id="mySidenav" class="sidenav">
+                        <div class="">
+                            <a href="#" class="nav-reg-btn levitate" style="padding: 8px 6px; font-size: 15px; color: #061d40"  id="reg"><strong>REGISTER</strong></a>
+                        </div>
                     </div>
                 </div>
             </div>
