--- a/src/app/legality/legality.component.html
+++ b/src/app/legality/legality.component.html
@@ -8,13 +8,12 @@
             <div class="team-banner">
                 <img class="d-block w-100" src="assets/img/background/team-banner.jpg" alt="First slide">
                 <div class="carousel-caption d-md-block">
-                    <p class="fadeInUp wow" data-wow-delay=".6s">India's First Poker League</p>
-
-                    <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Poker Sports League</h1>
-                    <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Our Mission</h1>
-                    <a href="javascript:void(0);" class="fadeInLeft wow btn btn-border btn-lg" data-wow-delay=".6s" (click)="togglereg()" id="reg">Register Now! </a>
-                    <div *ngIf="!auth.isLoggedIn() && !user" class="nav-item">
-                        <button (click)="toggle()" id="btToggle" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Login </button>
+                    
+                    <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Legality</h1>
+                    <div id="mySidenav" class="sidenav">
+                        <div class="">
+                            <a href="#" class="nav-reg-btn levitate" style="padding: 8px 6px; font-size: 15px; color: #061d40"  id="reg"><strong>REGISTER</strong></a>
+                        </div>
                     </div>
 
                 </div>
