--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -79,7 +79,7 @@ right: 0; ">
     
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" routerLink="/psl-teams" routerLinkActive="router-link-active" href='#top'>PSL Teams</a></li>
-                            <li><a class="dropdown-item" routerLink="/player-profile" routerLinkActive="router-link-active" href='#top'>PLAYER PROFILE</a></li>
+                            <li><a class="dropdown-item" routerLink="/player-profile" routerLinkActive="router-link-active" href='#top'>PLAYER STATS</a></li>
     
                         </ul>
                     </li>
@@ -91,10 +91,10 @@ right: 0; ">
             </a>
     
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" routerLink="/news" routerLinkActive="router-link-active" href='#top'>NEWS</a></li>
-                            <li><a class="dropdown-item" routerLink="/videos" routerLinkActive="router-link-active" href='#top'>VIDEOS</a></li>
+                            <li><a class="dropdown-item" routerLink="/news" routerLinkActive="router-link-active" href='#top'>DIGITAL MEIDA NEWS</a></li>
+                            <li><a class="dropdown-item" routerLink="/print-media" routerLinkActive="router-link-active" href='#top'>PRINT MEDIA NEWS</a></li>
                             <li><a class="dropdown-item" href="home/#gallery">EVENT GALLERY</a></li>
-                            <li><a class="dropdown-item" routerLink="/previous-seasons" routerLinkActive="router-link-active" href='#top'>PREVIOUS SEASONS</a></li>
+                          
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -189,9 +189,9 @@ right: 0; ">
     
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" routerLink="/news" routerLinkActive="router-link-active" href='#top'>NEWS</a></li>
-                    <li><a class="dropdown-item" routerLink="/videos" routerLinkActive="router-link-active" href='#top'>VIDEOS</a></li>
+                    <li><a class="dropdown-item" routerLink="/print-media" routerLinkActive="router-link-active" href='#top'>PRINT MEDIA</a></li>
                     <li><a class="dropdown-item" href="home/#gallery">EVENT GALLERY</a></li>
-                    <li><a class="dropdown-item" routerLink="/previous-seasons" routerLinkActive="router-link-active" href='#top'>PREVIOUS SEASONS</a></li>
+                    
                 </ul>
             </li>
             <li class="nav-item dropdown">
