--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -8,11 +8,13 @@
             <div class="team-banner">
                 <img class="d-block w-100" src="assets/img/background/team-banner.jpg" alt="First slide">
                 <div class="carousel-caption d-md-block">
-           
-                    <h1 class="wow fadeInDown heading" data-wow-delay=".4s">News</h1>
+
+                    <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Digital Media News</h1>
                     <div id="mySidenav" class="sidenav">
                         <div class="">
-                            <a href="#" class="nav-reg-btn levitate" style="padding: 8px 6px; font-size: 15px; color: #061d40"  id="reg"><strong>REGISTER</strong></a>
+                            <a href="#" class="nav-reg-btn levitate"
+                                style="padding: 8px 6px; font-size: 15px; color: #061d40"
+                                id="reg"><strong>REGISTER</strong></a>
                         </div>
                     </div>
 
@@ -29,4 +31,160 @@
 <div style="display:none" id="divshow2">
     <app-login></app-login>
 </div>
-<app-footer></app-footer>
+
+<section id="gallery" class="section-padding" >
+        <div class="container">
+           
+            <div class="row">
+                <div class="col-md-6 col-sm-6 col-lg-4">
+                    <div class="gallery-box">
+                        <div class="img-thumb">
+                            <img class="img-fluid" src="assets/img/news/new1.jpg" alt="">
+                        </div>
+                        <div class="overlay-box text-center">
+                            <a class="lightbox" href="assets/img/news/new1.jpg">
+                                <i class="lni-plus"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="ccol-md-6 col-sm-6 col-lg-4" margin rig>
+                    <div class="gallery-box">
+                        <div class="img-thumb">
+                            <img class="img-fluid" src="assets/img/news/new3.png" alt="">
+                        </div>
+                        <div class="overlay-box text-center">
+                            <a class="lightbox" href="assets/img/news/new3.png">
+                                <i class="lni-plus"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="ccol-md-6 col-sm-6 col-lg-4" margin rig>
+                        <div class="gallery-box">
+                            <div class="img-thumb">
+                                <img class="img-fluid" src="assets/img/news/new5.jpg" alt="">
+                            </div>
+                            <div class="overlay-box text-center">
+                                <a class="lightbox" href="assets/img/news/new5.jpg">
+                                    <i class="lni-plus"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ccol-md-6 col-sm-6 col-lg-4" margin rig>
+                            <div class="gallery-box">
+                                <div class="img-thumb">
+                                    <img class="img-fluid" src="assets/img/news/new4.png" alt="">
+                                </div>png
+                                <div class="overlay-box text-center">
+                                    <a class="lightbox" href="assets/img/news/new4.png">
+                                        <i class="lni-plus"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ccol-md-6 col-sm-6 col-lg-4" margin rig>
+                                <div class="gallery-box">
+                                    <div class="img-thumb">
+                                        <img class="img-fluid" src="assets/img/news/new6.png" alt="">
+                                    </div>
+                                    <div class="overlay-box text-center">
+                                        <a class="lightbox" href="assets/img/news/new6.png">
+                                            <i class="lni-plus"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="ccol-md-6 col-sm-6 col-lg-4" margin rig>
+                                    <div class="gallery-box">
+                                        <div class="img-thumb">
+                                            <img class="img-fluid" src="assets/img/news/new7.png" alt="">
+                                        </div>
+                                        <div class="overlay-box text-center">
+                                            <a class="lightbox" href="assets/img/news/new7.png">
+                                                <i class="lni-plus"></i>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="ccol-md-6 col-sm-6 col-lg-4" margin rig>
+                                        <div class="gallery-box">
+                                            <div class="img-thumb">
+                                                <img class="img-fluid" src="assets/img/news/new8.jpg" alt="">
+                                            </div>
+                                            <div class="overlay-box text-center">
+                                                <a class="lightbox" href="assets/img/news/new8.jpg">
+                                                    <i class="lni-plus"></i>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="ccol-md-6 col-sm-6 col-lg-4" margin rig>
+                                            <div class="gallery-box">
+                                                <div class="img-thumb">
+                                                    <img class="img-fluid" src="assets/img/news/new9.jpg" alt="">
+                                                </div>
+                                                <div class="overlay-box text-center">
+                                                    <a class="lightbox" href="assets/img/news/new9.jpg">
+                                                        <i class="lni-plus"></i>
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="ccol-md-6 col-sm-6 col-lg-4" margin rig>
+                                                <div class="gallery-box">
+                                                    <div class="img-thumb">
+                                                        <img class="img-fluid" src="assets/img/news/new11.png" alt="">
+                                                    </div>
+                                                    <div class="overlay-box text-center">
+                                                        <a class="lightbox" href="assets/img/news/new11.png">
+                                                            <i class="lni-plus"></i>
+                                                        </a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="ccol-md-6 col-sm-6 col-lg-4" margin rig>
+                                                    <div class="gallery-box">
+                                                        <div class="img-thumb">
+                                                            <img class="img-fluid" src="assets/img/news/new12.png" alt="">
+                                                        </div>
+                                                        <div class="overlay-box text-center">
+                                                            <a class="lightbox" href="assets/img/news/new12.png">
+                                                                <i class="lni-plus"></i>
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="ccol-md-6 col-sm-6 col-lg-4" margin rig>
+                                                        <div class="gallery-box">
+                                                            <div class="img-thumb">
+                                                                <img class="img-fluid" src="assets/img/news/new13.png" alt="">
+                                                            </div>
+                                                            <div class="overlay-box text-center">
+                                                                <a class="lightbox" href="assets/img/news/new13.png">
+                                                                    <i class="lni-plus"></i>
+                                                                </a>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="ccol-md-6 col-sm-6 col-lg-4" margin rig>
+                                                            <div class="gallery-box">
+                                                                <div class="img-thumb">
+                                                                    <img class="img-fluid" src="assets/img/news/news2.png" alt="">
+                                                                </div>
+                                                                <div class="overlay-box text-center">
+                                                                    <a class="lightbox" href="assets/img/news/news2.png">
+                                                                        <i class="lni-plus"></i>
+                                                                    </a>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+               </div>
+        </div>
+       
+       
+    </section>
+    <app-footer></app-footer>
+    
