--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -55,6 +55,18 @@
             </div>
         </div>
     </div>
+   
 </footer>
+<div id="copyright">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="site-info">
+                        <p>	&copy; Poker Sports League. All Rights Reserved</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 <!-- Footer Section End -->
