--- a/src/app/terms-and-conditions/terms-and-conditions.component.html
+++ b/src/app/terms-and-conditions/terms-and-conditions.component.html
@@ -264,11 +264,5 @@
     </div>
 
 </section>
+<app-footer></app-footer>
 
-
-<div style="display:none" id="divreg" class="toggle-form">
-    <app-register></app-register>
-</div>
-<div style="display:none" id="divshow2">
-    <app-login></app-login>
-</div>
