--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -10,6 +10,7 @@ right: 0; ">
 <!-- Navbar Top header Start -->
     <div id="nav_header-top" class="header_top" > 
             <div class="header_container">
+                    <div class="icon-logo-top-head" ><a href="/index.html" ><img style=" max-width: 100%;max-height: 100%;" src="assets/img/PSL_final.png"></a></div>
                 <div class="head_right ">
                     
                     <div class="psl_contact_info">
@@ -91,8 +92,8 @@ right: 0; ">
             </a>
     
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" routerLink="/news" routerLinkActive="router-link-active" href='#top'>DIGITAL MEIDA NEWS</a></li>
-                            <li><a class="dropdown-item" routerLink="/print-media" routerLinkActive="router-link-active" href='#top'>PRINT MEDIA NEWS</a></li>
+                            <li><a class="dropdown-item" href="/news" routerLinkActive="router-link-active" href='#top'>DIGITAL MEIDA NEWS</a></li>
+                            <li><a class="dropdown-item" href="/print-media" routerLinkActive="router-link-active" href='#top'>PRINT MEDIA NEWS</a></li>
                             <li><a class="dropdown-item" href="home/#gallery">EVENT GALLERY</a></li>
                           
                         </ul>
