--- a/src/app/team-members/team-members.component.html
+++ b/src/app/team-members/team-members.component.html
@@ -39,6 +39,27 @@ h3{
             </div>
         </div>
         <div class="row">
+			 <div class="col-sm-8 col-md-8 col-lg-4">
+                <!-- Team Item Starts -->
+                <div class="team-item wow fadeInUp" data-wow-delay="0.2s">
+                    <div class="team-img" style="max-width: 100%;">
+                        <img class="img-fluid" style="height:250px;width: 250px;max-width: 100%;" src="assets/img/amit-burman.jpg" alt="">
+                        <div class="" style="position: initial;">
+                            <h3>Amit Burman</h3>
+                            <p><b>Co-founder and Invester</b></p>
+                            <p>Amit Burman is the chairman of Dabur group. He is one of the prime invester of PSL. </p>
+                        </div>
+                        <div id="amit_burman" class="collapse" aria-labelledby="headingOne" data-parent="#headingOne">
+                             Mr. Amit Burman is responsible for Dabur India's foray into processed foods business with the setting up of Dabur Foods Ltd. It is to Amit's credit today that Dabur Real and Hommade are household names. He is also responsible for driving all business strategy, development and communications at Dabur Foods.
+                        </div>
+                        <div id="amit_b_toggle" class="header-title" data-toggle="collapse" data-target="#amit_burman" aria-expanded="true" aria-controls="collapseOne" style="cursor:pointer">
+                            <span style="color:blue;">Read more</span>
+                        </div>
+                    </div>
+                    
+                </div>
+                <!-- Team Item Ends -->
+            </div>
             <div class="col-sm-8 col-md-8 col-lg-4">
                 <!-- Team Item Starts -->
                 <div class="team-item wow fadeInUp" data-wow-delay="0.2s">
