--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -292,7 +292,7 @@
         <div class="row">
             <div class="col-xs-12 col-md-6 col-lg-4" id="amit_b_abt">
                 <div class="about-item">
-                    <img class="img-fluid" src="https://www.dabur.com/img/article/11-mr.-amit-burman.jpg" style="width:100%;height:250px" alt="">
+                    <img class="img-fluid" src="assets/img/amit-burman.jpg" style="width:100%;height:250px" alt="">
                     <div class="card">
                         <div class="card-header" id="headingOne">
                             <b>Amit Burman, Co-founder and Invester</b><br>Amit Burman is the chairman of Dabur group. He is one of the prime invester of PSL.
