--- a/src/app/player-profile/player-profile.component.html
+++ b/src/app/player-profile/player-profile.component.html
@@ -22,6 +22,77 @@
         <!-- Main Carousel Section End -->
     </div>
 </header>
+<!-- <div style="padding: 20px;">
+  <label>Select Season : </label>
+<select class="select-css">
+	<option value = "2">PSL Season 2 Stats</option>
+	<option value = "1">PSL Season 1 Stats</option>
+</select>
+</div> -->
+<div class="mat-app-background basic-container">
+<mat-form-field>
+  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+</mat-form-field>
+
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" matSort>
+
+    <!-- ID Column -->
+    <ng-container matColumnDef="player_name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Player Name </th>
+      <td mat-cell *matCellDef="let row"> {{row.player_name}} </td>
+    </ng-container>
+
+    <!-- Progress Column -->
+    <ng-container matColumnDef="team">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Team </th>
+      <td mat-cell *matCellDef="let row"> {{row.team}} </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="category">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Category </th>
+      <td mat-cell *matCellDef="let row"> {{row.category}} </td>
+    </ng-container>
+
+    <!-- Color Column -->
+    <ng-container matColumnDef="tour_played">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> PSL Tournaments played </th>
+      <td mat-cell *matCellDef="let row" > {{row.tour_played}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="points_earned">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Points Earned </th>
+      <td mat-cell *matCellDef="let row" > {{row.points_earned}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="ranking">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Season ranking </th>
+      <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.ranking}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="overall">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Overall Ranking </th>
+      <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.overall}} </td>
+    </ng-container>
+<!-- 
+    <ng-container matColumnDef="bio">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Bio </th>
+      <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.color}} </td>
+    </ng-container> -->
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+    </tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+</div>
+</div>
+
+<!-- Copyright 2019 Google Inc. All Rights Reserved.
+    Use of this source code is governed by an MIT-style license that
+    can be found in the LICENSE file at http://angular.io/license -->
 <div style="display:none" id="divreg" class="toggle-form">
     <app-register></app-register>
 </div>
