team and stats changes

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -92,8 +92,8 @@ right: 0; ">
             </a>
     
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/news" routerLinkActive="router-link-active" href='#top'>DIGITAL MEIDA NEWS</a></li>
-                            <li><a class="dropdown-item" href="/print-media" routerLinkActive="router-link-active" href='#top'>PRINT MEDIA NEWS</a></li>
+                            <li><a class="dropdown-item" href="/news" routerLinkActive="router-link-active" >DIGITAL MEDIA NEWS</a></li>
+                            <li><a class="dropdown-item" href="/print-media" routerLinkActive="router-link-active">PRINT MEDIA NEWS</a></li>
                             <li><a class="dropdown-item" href="home/#gallery">EVENT GALLERY</a></li>
                           
                         </ul>
