--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -84,8 +84,11 @@ right: 0; ">
     
                         </ul>
                     </li>
-    
-    
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/league-structure" routerLinkActive="router-link-active" href='#top'>
+             LEAGUE STRUCTURE
+                </a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown">
         NEWS/MEDIA
@@ -119,7 +122,7 @@ right: 0; ">
                         </a>
     
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" routerLink="/league-structure" routerLinkActive="router-link-active" href='#top'>LEAGUE STRUCTURE</a></li>
+                           
                             <li><a class="dropdown-item" href="home/#sponsors">PARTNERS</a></li>
                             <li><a class="dropdown-item" href="home/#faq">FAQ's</a></li>
                             <li><a class="dropdown-item" href="home/#contact">CONTACT US</a></li>
@@ -182,7 +185,11 @@ right: 0; ">
                 </ul>
             </li>
     
-    
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/league-structure" routerLinkActive="router-link-active" href='#top'>
+     LEAGUE STRUCTURE
+        </a>
+            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown">
     NEWS/MEDIA
@@ -216,7 +223,7 @@ right: 0; ">
             </a>
     
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" routerLink="/league-structure" routerLinkActive="router-link-active" href='#top'>LEAGUE STRUCTURE</a></li>
+                   
                     <li><a class="dropdown-item" href="home/#sponsors">PARTNERS</a></li>
                     <li><a class="dropdown-item" href="home/#faq">FAQ's</a></li>
                     <li><a class="dropdown-item" href="home/#contact">CONTACT US</a></li>
