--- a/src/app/legality/legality.component.html
+++ b/src/app/legality/legality.component.html
@@ -12,7 +12,7 @@
                     <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Legality</h1>
                     <div id="mySidenav" class="sidenav">
                         <div class="">
-                            <a href="#" class="nav-reg-btn levitate" style="padding: 8px 6px; font-size: 15px; color: #061d40"  id="reg"><strong>REGISTER</strong></a>
+                            <a href="#" class="nav-reg-btn levitate"  id="reg"><strong>REGISTER <br>NOW</strong></a>
                         </div>
                     </div>
 
