--- a/src/app/team-members/team-members.component.html
+++ b/src/app/team-members/team-members.component.html
@@ -17,7 +17,7 @@ h3{
                     <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Our Core Team</h1>
                     <div id="mySidenav" class="sidenav">
                         <div class="">
-                            <a href="#" class="nav-reg-btn levitate" style="padding: 8px 6px; font-size: 15px; color: #061d40"  id="reg"><strong>REGISTER</strong></a>
+                            <a href="#" class="nav-reg-btn levitate"  id="reg"><strong>REGISTER <br>NOW</strong></a>
                         </div>
                     </div>
                 </div>
