--- a/src/app/player-profile/player-profile.component.html
+++ b/src/app/player-profile/player-profile.component.html
@@ -9,11 +9,11 @@
                 <img class="d-block w-100" src="assets/img/background/team-banner.jpg" alt="First slide">
                 <div class="carousel-caption d-md-block">
          
-                    <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Player profile</h1>
+                    <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Player Stats</h1>
                     <div id="mySidenav" class="sidenav">
-                        <div class="">
-                            <a href="#" class="nav-reg-btn levitate" style="padding: 8px 6px; font-size: 15px; color: #061d40"  id="reg"><strong>REGISTER</strong></a>
-                        </div>
+                      <div class="">
+                        <a href="#" class="nav-reg-btn levitate"  id="reg"><strong>REGISTER <br>NOW</strong></a>
+                    </div>
                     </div>
                 </div>
             </div>
