--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -13,11 +13,11 @@ right: 0; ">
                     <div class="icon-logo-top-head" ><a href="/index.html" ><img style=" max-width: 100%;max-height: 100%;" src="assets/img/PSL_final.png"></a></div>
                 <div class="head_right ">
                     
-                    <div class="psl_contact_info">
+                    <!--div class="psl_contact_info">
                         <a href="tel:+91 8322987777 "><i class="fa fa-phone"></i> <em>+91 8322987777 </em></a>
-                    </div>
+                    </div-->
                     <div class="psl_contact_info">
-                        <a href="mailto: info@pokersportsleague.com "><i class="fa fa-envelope"></i> <em> info@pokersportsleague.com </em></a>
+                        <a href="mailto: info@pokersportsleague.com "><i class="fa fa-envelope"></i> <em class="psl_contact_info_text"> info@pokersportsleague.com </em></a>
                     </div>
                     <div class="headsocial_list">
                         <ul>
